[project]
name = "ambulance-routing-env"
version = "0.1.0"
description = "Emergency Ambulance Routing RL Environment using OpenEnv"
authors = [
    { name = "Bhushan Korde" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
env_class = "env.ambulance_env.AmbulanceEnv"
